--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,7 @@
     </div>
     <!-- signup form -->
     <div class="login-box">
-    <form action="Assignment.html" onsubmit="return validation()">
+    <form action="index.html" onsubmit="return validation()">
         <header>Sign Up</header>
         <div>
             <label style="margin-left: 15%;">Name</label>
