bug fix for form action

--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
     </div>
     <!-- login form -->
     <div class="login-box">
-    <form action="Assignment.html">
+    <form action="index.html">
         <h2 style="margin-left: 20%;">User Login</h2>
         <br>
         <div style="margin-left: 10%;">
