--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
+<link href='https://fonts.googleapis.com/css?family=Pattaya' rel='stylesheet'>
+
 <link href='https://fonts.googleapis.com/css?family=Kristi' rel='stylesheet'>
 <style>
 #h-kerala {
@@ -17,6 +19,9 @@
     font-size: 800%;
     font-weight: 800;
     color: rgba(0, 0, 0, 0.945);
+}
+.para-border{
+  font-family: 'Pattaya';font-size: 190%;
 }
 </style>
 
@@ -81,7 +86,7 @@
     <div class="Home-para">
       <p>
         <h1 id="h-kerala"><b><i>Kerala Tourism</i></b></h1>
-        <H4 class="para-border" style="color: blanchedalmond;"><I>Kerala, a state on India's tropical Malabar Coast, has nearly 600km of Arabian Sea shoreline. It's known for its palm-lined beaches and backwaters, a network of canals.</I></H4>
+        <H4 class="para-border" style="color: rgba(252, 252, 252, 0.884);"><I>Kerala, a state on India's tropical Malabar Coast, has nearly 600km of Arabian Sea shoreline. It's known for its palm-lined beaches and backwaters, a network of canals.Kerala is famous especially for its ecotourism initiatives and beautiful backwaters.Its unique culture and traditions, coupled with its varied demography, have made Kerala one of the most popular tourist destinations in the world.</I></H4>
       </p>
     </div>
 </body>
