front page elements added

--- a/index.html
+++ b/index.html
@@ -89,5 +89,37 @@
         <H4 class="para-border" style="color: rgba(252, 252, 252, 0.884);"><I>Kerala, a state on India's tropical Malabar Coast, has nearly 600km of Arabian Sea shoreline. It's known for its palm-lined beaches and backwaters, a network of canals.Kerala is famous especially for its ecotourism initiatives and beautiful backwaters.Its unique culture and traditions, coupled with its varied demography, have made Kerala one of the most popular tourist destinations in the world.</I></H4>
       </p>
     </div>
+
+    <!-- footer cards start-->
+    <div class="card-deck" style="padding-left: 2%; padding-right: 2%; padding-bottom: 3%;">
+      <a href="url" style="text-decoration: none;">
+      <div class="card">
+        <img src="Backgrond/Blue coast full hd wallpaper.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Entire Kerala</h5>
+          <p class="card-text">A journey through God's Own Country.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </a>
+      </div>
+      <div class="card">
+        <img src="Backgrond/d8_ernakulam.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Central Kerala</h5>
+          <p class="card-text">Trip to the soul of Kerala.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="Backgrond/houseboat-package.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Backwaters</h5>
+          <p class="card-text">Through the stretches of emerald</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+    <!-- footer cards end -->
+
 </body>
 </html>
