--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
         <h1 id="h-kerala"><b><i>Kerala Tourism</i></b></h1>
         <H4 class="para-border" style="color: rgba(252, 252, 252, 0.884);"><I>Kerala, a state on India's tropical Malabar Coast, has nearly 600km of Arabian Sea shoreline. It's known for its palm-lined beaches and backwaters, a network of canals.Kerala is famous especially for its ecotourism initiatives and beautiful backwaters.Its unique culture and traditions, coupled with its varied demography, have made Kerala one of the most popular tourist destinations in the world.</I></H4>
       </p>
-    </div>
+    </div>  
 
+    <div id="card-pack"><h3 id="packs-border" style="padding-left: 40%; padding-right: 40%; padding-bottom: 0.5%; color: rgba(226, 216, 200, 0.884);">Tour Packs</h3>
     <!-- footer cards start-->
     <div class="card-deck" style="padding-left: 2%; padding-right: 2%; padding-bottom: 3%;">
-      <a href="url" style="text-decoration: none;">
+      
       <div class="card">
+        <a href="login.html" style="text-decoration: none;">
         <img src="Backgrond/Blue coast full hd wallpaper.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Entire Kerala</h5>
@@ -102,6 +104,7 @@
         </div>
       </a>
       </div>
+      <a href="login.html" style="text-decoration: none;">
       <div class="card">
         <img src="Backgrond/d8_ernakulam.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -109,7 +112,9 @@
           <p class="card-text">Trip to the soul of Kerala.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
+      </a>
       </div>
+      <a href="login.html" style="text-decoration: none;">
       <div class="card">
         <img src="Backgrond/houseboat-package.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -117,9 +122,12 @@
           <p class="card-text">Through the stretches of emerald</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
+      </a>
       </div>
     </div>
     <!-- footer cards end -->
+  </div>
+
 
 </body>
 </html>
