--- a/District2.html
+++ b/District2.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     
+    <link href='https://fonts.googleapis.com/css?family=Pattaya' rel='stylesheet'>
+<style>
+#packs-border {
+    font-family: 'Pattaya';
+    font-size: 200%;
+}
+</style>
     
     <link rel="stylesheet" href="styles.css">    
 </head>
@@ -43,9 +50,9 @@
       <!-- navbar ends -->
     </header>
 </div>
+<div id="card-pack"><h2 id="packs-border" style="padding-left: 40%; padding-right: 40%; padding-bottom: 0.5%; color: rgba(226, 216, 200, 0.884);">DISTRICTS</h2></div>
     <div class="margboot">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-      <h1>DISTRICTS</h1>
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
