--- a/district-pages/alapuzha.html
+++ b/district-pages/alapuzha.html
@@ -11,7 +11,7 @@
     <title>Alapuzha</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d10_alapy.jpg">
+<body class="body2" background="../dist_pics/d10_alapy (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
@@ -41,7 +41,8 @@
         </header>
     </div>
 
-    <h1 style="color: black;"><B><I>ALAPUZHA</I></B></h1>
+    <br>
+    <h1 style="color: rgb(254, 254, 255);"><B><I>ALAPUZHA</I></B></h1>
     <div class="Home-para">
         <UL>
             <LI>
