--- a/district-pages/ernakulam.html
+++ b/district-pages/ernakulam.html
@@ -11,7 +11,7 @@
     <title>Ernakulam</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d8_ernakulam.jpg">
+<body class="body2" background="../dist_pics/d8_ernakulam (1).jpg">
 
     <div>
         <header>
@@ -46,11 +46,11 @@
     <div class="Home-para">
         <UL>
             <LI>
-                <H2 style="color: blanchedalmond;">Chottanikara Bhagavathy Temple</H2>
+                <H2 style="color: rgb(58, 43, 20);"><b>Chottanikara Bhagavathy Temple</b></H2>
                 <img src="distpics/ern1.jpg" alt="">
             </LI>
             <li>
-                <h2 style="color: blanchedalmond;">Folklore Museum</h2>
+                <h2 style="color: rgb(58, 43, 20);"><b>Folklore Museum</b></h2>
                 <img src="distpics/ern2.jpg" alt="">
             </li>
         </UL>
