--- a/district-pages/idukki.html
+++ b/district-pages/idukki.html
@@ -11,7 +11,7 @@
     <title>IDUKKI</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d9_idukki.jpg">
+<body class="body2" background="../dist_pics/d9_idukki (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
