--- a/district-pages/kannur.html
+++ b/district-pages/kannur.html
@@ -11,7 +11,7 @@
     <title>KANNUR</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d2_kannur.jpg">
+<body class="body2" background="../dist_pics/d2_kannur (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
