--- a/district-pages/kollam.html
+++ b/district-pages/kollam.html
@@ -11,7 +11,7 @@
     <title>KOLLAM</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d13_kollam.jpg">
+<body class="body2" background="../dist_pics/d13_kollam (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
