--- a/district-pages/palakad.html
+++ b/district-pages/palakad.html
@@ -11,7 +11,7 @@
     <title>PALAKKAD</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2 extra" background="../dist_pics/d6_palakad.jpg">
+<body class="body2 extra" background="../dist_pics/d6_palakad (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
