--- a/district-pages/pathanamthitta.html
+++ b/district-pages/pathanamthitta.html
@@ -11,7 +11,7 @@
     <title>PATHANAMTHITTA</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/pathanam.jpg">
+<body class="body2" background="../dist_pics/pathanam (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
