--- a/district-pages/wayanad.html
+++ b/district-pages/wayanad.html
@@ -11,7 +11,7 @@
     <title>WAYANAD</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d3_wayanad.jpg">
+<body class="body2" background="../dist_pics/d3_wayanad (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
@@ -44,11 +44,11 @@
     <div class="Home-para">
         <UL>
             <LI>
-                <H2 style="color: blanchedalmond;">Mountain Hike in Wayanad</H2>
+                <H2 style="color: black;">Mountain Hike in Wayanad</H2>
                 <img src="distpics/w1.jpg" alt="">
             </LI>
             <li>
-                <h2 style="color: blanchedalmond;">Kayaking at wayanad</h2>
+                <h2 style="color: black;">Kayaking at wayanad</h2>
                 <img src="distpics/w2.jpg" alt="">
             </li>
         </UL>
