--- a/district-pages/kas.html
+++ b/district-pages/kas.html
@@ -1,4 +1,4 @@
-..<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -11,7 +11,7 @@
     <title>KASARAGOD</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d1_bekal_fort.jpg">
+<body class="body2" background="../dist_pics/d1_bekal_fort (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
