--- a/district-pages/kottayam.html
+++ b/district-pages/kottayam.html
@@ -11,7 +11,7 @@
     <title>KOTTAYAM</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d11_kottayam.jpg">
+<body class="body2" background="../dist_pics/d11_kottayam (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
@@ -40,7 +40,7 @@
           <!-- navbar ends -->
         </header>
     </div>
-    <h1 style="color: black;"><B><I>KOTTAYAM</I></B></h1>
+    <h1 style="color: rgb(243, 233, 233);"><B><I>KOTTAYAM</I></B></h1>
     <div class="Home-para">
         <UL>
             <LI>
