--- a/district-pages/kozhi.html
+++ b/district-pages/kozhi.html
@@ -11,7 +11,7 @@
     <title>KOZHIKODE</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d4_Calicutbeach.JPG">
+<body class="body2" background="../dist_pics/d4_Calicutbeach (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
