--- a/district-pages/malapuram.html
+++ b/district-pages/malapuram.html
@@ -11,7 +11,7 @@
     <title>MALAPPURAM</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d5_malapuram.jpg">
+<body class="body2" background="../dist_pics/d5_malapuram (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
