--- a/district-pages/thrissur.html
+++ b/district-pages/thrissur.html
@@ -11,7 +11,7 @@
     <title>THRISSUR</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d7_thrissur.jpg">
+<body class="body2" background="../dist_pics/d7_thrissur (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
