--- a/district-pages/trivnadram.html
+++ b/district-pages/trivnadram.html
@@ -11,7 +11,7 @@
     <title>THIRUVANANTHAPURAM</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="body2" background="../dist_pics/d14_thiruvanam.jpg">
+<body class="body2" background="../dist_pics/d14_thiruvanam (1).jpg">
     <div>
         <header>
           <!-- Navbar -->
