--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
       <a href="login.html" style="text-decoration: none;">
       <div class="card">
-        <img src="Backgrond/d10_alapy.jpg" class="card-img-top" alt="...">
+        <img src="Backgrond/d8_ernakulam.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Backwaters</h5>
           <p class="card-text">Through the stretches of emerald</p>
