--- a/District2.html
+++ b/District2.html
@@ -234,7 +234,7 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-      <p style="margin-left: 45%;">click on the image</p>
+      <p style="margin-left: 45%; color: blanchedalmond;">click on the image</p>
     </div>
 
     
